# 100daysofpythonmaybe

./: LICENSE  README.md  pyproject.toml
100Days/Day 1/: HelloWorld.py
100Days/Day 2/: Debugging.py
